[package]
name = "pay"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "pay"
path = "src/main.rs"

[features]
default = []
# Phase 20: Opt-in Solana / MPP / Session support.
# EVM + x402 is unconditional. Activate `solana` to additionally
# include Solana MPP/x402/Session and the Payment Debugger UI.
solana = [
    "pay-core/solana",
    "pay-mcp/solana",
    "dep:solana-mpp",
    "dep:solana-pubkey",
    "dep:ed25519-dalek",
    "dep:bs58",
    "dep:pay-pdb",
]
gcp_kms = ["solana", "solana-mpp/gcp_kms"]
vendored-openssl = ["pay-core/vendored-openssl"]

[dependencies]
axum = { workspace = true }
pay-core = { workspace = true, features = ["server"] }
pay-keystore = { workspace = true }
pay-types = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }
pay-mcp = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
owo-colors = { workspace = true }
shellexpand = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
qrcode = { workspace = true }
urlencoding = "2.1.3"
uuid = { workspace = true }
webbrowser = { workspace = true }

# Solana opt-ins (gated by the `solana` feature — Phase 20)
solana-mpp     = { workspace = true, optional = true }
solana-pubkey  = { workspace = true, optional = true }
ed25519-dalek  = { workspace = true, optional = true }
bs58           = { workspace = true, optional = true }
pay-pdb        = { workspace = true, optional = true }

[dev-dependencies]
serial_test = "3"
