[package]
name = "pay-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
# Payment middleware for axum-based servers (metering, accounting, 402 flow).
server = ["dep:axum"]
# Gate network-dependent integration tests (e.g. OpenAPI smoke tests).
network_tests = []
# Build and run Surfpool-backed integration tests. This is opt-in because
# surfpool-sdk's build script embeds a report viewer and may need network
# access unless SURFPOOL_REPORT_UI_DIR is provided. Requires `solana` since
# surfpool is a Solana validator emulator.
surfpool_tests = ["server", "solana", "dep:surfpool-sdk"]
# Build OpenSSL from source for cross-compilation (no system libssl-dev needed).
# Activates openssl-sys/vendored which is pulled in transitively by
# solana-rpc-client → reqwest → native-tls → openssl-sys.
vendored-openssl = ["openssl-sys/vendored"]
# Phase 20: Opt-in Solana / MPP / Session support.
# EVM + x402 is the primary protocol and compiles unconditionally.
# Activate `solana` to additionally include Solana MPP, Solana x402,
# and Session-based payments. Without this flag, the entire Solana code
# path is excluded from the build graph.
solana = [
    "dep:solana-mpp",
    "dep:solana-x402",
    "dep:ed25519-dalek",
    "dep:bs58",
    "dep:bincode",
    "dep:solana-hash",
    "dep:solana-instruction",
    "dep:solana-message",
    "dep:solana-pubkey",
    "dep:solana-signature",
    "dep:solana-system-interface",
    "dep:solana-transaction",
]

[dependencies]
axum = { workspace = true, optional = true }
openssl-sys = { version = "0.9", optional = true }
pay-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
percent-encoding = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
hmac = "0.12"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
rand = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
reqwest = { workspace = true }
pay-keystore = { workspace = true }

# Solana (opt-in; activated by the `solana` feature — Phase 20)
ed25519-dalek            = { workspace = true, optional = true }
bs58                     = { workspace = true, optional = true }
solana-mpp               = { workspace = true, optional = true }
solana-x402              = { workspace = true, optional = true }
bincode                  = { workspace = true, optional = true }
solana-hash              = { workspace = true, optional = true }
solana-instruction       = { workspace = true, optional = true }
solana-message           = { workspace = true, optional = true }
solana-pubkey            = { workspace = true, optional = true }
solana-signature         = { workspace = true, optional = true }
solana-system-interface  = { workspace = true, optional = true }
solana-transaction       = { workspace = true, optional = true }
surfpool-sdk = { git = "https://github.com/solana-foundation/surfpool", branch = "feat/sdk", optional = true }

# EVM + x402 (unconditional — primary protocol since Phase 20)
alloy             = { workspace = true }
x402-chain-eip155 = { workspace = true }
x402-types        = { workspace = true }
hex               = { workspace = true }
parking_lot       = { workspace = true }
zeroize           = { workspace = true }

[dev-dependencies]
serde_yml = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
tower = "0.5"
serial_test = "3"
solana-client = "3.1"

[[test]]
name = "metering_tests"
required-features = ["server"]

[[test]]
name = "server_tests"
required-features = ["server"]

[[test]]
name = "surfpool_tests"
required-features = ["surfpool_tests"]

[[test]]
name = "session_surfpool_sdk_tests"
required-features = ["surfpool_tests"]
