[package]
name = "pay-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
# Re-export pay-core's `solana` feature for the MCP curl tool's
# Mpp/Session/SIWX branches.
solana = ["pay-core/solana"]

[dependencies]
pay-core = { workspace = true }
pay-types = { workspace = true }
pay-keystore = { workspace = true }
base64 = { workspace = true }
crc32fast = { workspace = true }
flate2 = { workspace = true }
mime_guess = { workspace = true }
qrcode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
